FIX Banner Block background overflow and content positioning issues

--- a/src/scss/components/banner-block.scss
+++ b/src/scss/components/banner-block.scss
@@ -14,6 +14,8 @@
     left: 0;
     top: 0;
     width: 100%;
+    display: flex;
+    align-items: center;
   }
 
   .banner-element__title {
